--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@
   display: flex;
   flex-direction: column;
   /* border: 1px solid black; */
-  width: 20%;
+  width: auto;
   display: flex;
 }
 .otherDays {
@@ -52,6 +52,7 @@
   height: 20%;
   display: flex;
   font-size: 24px;
+  margin-left: 1rem;
   /* border: 1px solid green; */
 }
 
@@ -89,7 +90,11 @@
   flex-direction: column;
   justify-content: center;
   width: 100%;
+  text-wrap: nowrap;
+  margin-left: 1rem;
+  padding-left: 1rem;
   /* border: 1px solid cyan; */
+  border-left: 1px solid #8A8C8E;
 }
 
 .summaryTextHidden{
