--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   text-align: center;
   margin-top: 400;
   width: 80vw;
+  color: #3A3C3E;
   /* border: 1px solid green; */
 }
 
@@ -116,8 +117,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  border-left: 1px solid #D5D5D5;
+  border-left: 1px solid #d5d5d5;
   width: 75px;
+  /* border: 1px solid red; */
 }
 
 .weatherByHourTime {
@@ -128,5 +130,13 @@
 .weatherByHourIcon {
   /* border: 1px solid green; */
   /* width: 75px; */
+  /* margin-top: 50px; */
+}
+
+.weatherByHourTemp {
+  display: flex;
+  justify-content: center;
+  /* border: 1px solid blue; */
+  font-weight: 600;
   /* margin-top: 50px; */
 }
