--- a/src/App.css
+++ b/src/App.css
@@ -17,19 +17,29 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-header {
+  width: 100%;
+  height: 4rem;
+  background-color: #149edc; /* You can change this color as desired */
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 0 2rem;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin-bottom: 2rem;
 }
 
-.App-link {
-  color: #61dafb;
+.app-header h1 {
+  color: white;
+  margin: 0;
+  font-size: 1.8rem;
+  letter-spacing: 1px;
+  font-weight: 700;
+}
+
+/* You might need to adjust your existing styles to accommodate the header */
+.App {
+  position: relative;
+  /* Add any other existing styles */
 }
 
 .weatherSummary {
@@ -158,5 +168,3 @@ select {
   font-weight: 600;
   /* margin-top: 50px; */
 }
-
-
