--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,9 @@ body {
   /* border: 1px solid blue; */
   display: flex;
   justify-content: center;
-  align-items: center;
-  height: 80vh;
-  /* margin-top: auto; */
+  /* align-items: center; */
+  /* height: 80vh; */
+  margin-top: 1rem
 }
 
 code {
