fix weather by hour logic

--- a/src/styles/HourlyForecast.css
+++ b/src/styles/HourlyForecast.css
@@ -12,6 +12,10 @@
   /* margin-top: 50px; */
 }
 
+.weatherByHourTempContainer{
+/* border: 1px solid red; */
+}
+
 .weatherByHourIcon {
   /* border: 1px solid green; */
   /* width: 75px; */
