--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,93 +1,44 @@
 .App {
   text-align: center;
-  width: 80vw;
+  /* width: 80vw; */
   color: #3a3c3e;
   position: relative;
-  margin: 0 auto; /* Center the app */
-  margin-top: 0;
-  margin-bottom: 0;
-  /* border: 1px solid red */
-}
-
-.weatherSummary {
+  margin: 0;
   /* border: 1px solid red; */
-  height: 150px;
-  display: flex;
-  justify-content: space-between;
 }
 
-.today {
-  display: flex;
-  flex-direction: column;
-  /* border: 1px solid black; */
-  width: auto;
-  display: flex;
-}
-.otherDays {
-  /* border: 1px solid blue; */
-  width: 30%;
-  margin-top: auto;
-  margin-bottom: auto;
-  /* display: flex; */
-  /* justify-content: center; */
-  /* align-items: center; */
-}
-
-.today .heading {
-  height: 20%;
-  display: flex;
-  font-size: 1.5rem;
-  line-height: 28px;
-  line-height: 1.75rem;
-  /* margin-left: 2rem; */
+.location-and-daily-forecast {
   /* border: 1px solid green; */
+  background-image: url('../../public/bi.jpg');
 }
 
-.today .summary {
-  display: flex;
-  height: 80%;
-  /* border: 1px solid purple; */
+body.dark-mode {
+  background-color: #121212;
+  color: #f8f9fa;
 }
 
-.summaryIcon {
-  width: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  /* border: 1px solid red; */
-  height: 100%;
+body.dark-mode .App {
+  color: #f8f9fa;
 }
 
-.summaryTemperature {
-  /* border: 1px solid green; */
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.summaryTemperatureMax {
-  font-weight: bold;
-  /* border: 1px solid blue; */
-}
-.summaryTemperatureMin {
-  /* border: 1px solid blue; */
-}
-.summaryText {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 100%;
-  text-wrap: nowrap;
-  margin-left: 1rem;
-  padding-left: 1rem;
-  /* border: 1px solid cyan; */
-  border-left: 1px solid #8a8c8e;
+body.dark-mode .app-header {
+  background-color: #222;
 }
 
-.summaryTextHidden {
-  visibility: hidden;
+body.dark-mode .weatherDay {
+  background-color: rgba(40, 40, 40, 0.9);
+  border-left: 1px solid #444;
 }
 
-.weatherSummary .tomorrow {
-  /* border: 1px solid blue; */
-  width: 75%;
+body.dark-mode .weatherDay__maxTemp {
+  color: #ff6b6b;
+}
+
+body.dark-mode .weatherDay__minTemp {
+  color: #4dabf7;
+}
+
+body.dark-mode .weatherDay--selected {
+  background-color: rgba(20, 158, 220, 0.2);
+  border: 1px solid rgba(20, 158, 220, 0.5);
 }
