--- a/src/styles/DailyForecast.css
+++ b/src/styles/DailyForecast.css
@@ -1,4 +1,5 @@
 /* Weather days styling */
+
 .weatherDays {
   display: flex;
   overflow-x: auto;
@@ -9,6 +10,9 @@
   flex-wrap: nowrap;
   align-items: end;
   width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  /* padding: 0 1rem; */
   /* border: 1px solid red; */
 }
 
@@ -35,7 +39,7 @@
   display: flex;
   flex: 0 0 6.75rem;
   height: 5.875rem;
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: white;
   padding-left: 0.7rem;
   margin-top: 0.5rem;
   flex-direction: column;
