--- a/src/styles/HourlyForecast.css
+++ b/src/styles/HourlyForecast.css
@@ -12,8 +12,8 @@
   /* margin-top: 50px; */
 }
 
-.weatherByHourTempContainer{
-/* border: 1px solid red; */
+.weatherByHourTempContainer {
+  /* border: 1px solid red; */
 }
 
 .weatherByHourIcon {
@@ -35,4 +35,8 @@
   display: flex;
   height: 400px;
   margin-top: 50px;
+  overflow-x: auto;
+  max-width: 1280px;
+  margin: 0 auto;
+  /* padding: 0 1rem; */
 }
