--- a/src/styles/DailyForecast.css
+++ b/src/styles/DailyForecast.css
@@ -6,13 +6,12 @@
   scrollbar-width: thin;
   scroll-behavior: smooth;
   -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
-  padding-bottom: 0.5rem; /* Space for scrollbar */
+  padding-bottom: 0.3rem;
   flex-wrap: nowrap;
   align-items: end;
   width: 100%;
   max-width: 1280px;
   margin: 0 auto;
-  /* padding: 0 1rem; */
   /* border: 1px solid red; */
 }
 
@@ -49,7 +48,6 @@
   cursor: pointer;
   border-left: 1px solid #d5d5d5;
   /* border: 1px solid blue; */
-  /* border-bottom: 6px solid #eb5038; */
   box-shadow: 0 6px 0 #eb5038;
 }
 
@@ -58,15 +56,16 @@
   flex: 0 0 25.375rem; /* This sets it to 40% of the container width */
   min-width: 25.375rem; /* Set minimum width */
   max-width: 30rem; /* Set maximum width to prevent it from becoming too large */
-  /* border-top: 8px solid #eb5038; */
   height: 9.25rem;
   z-index: 2; /* Ensure it appears above other items */
   position: relative; /* Need this for z-index to work */
   border-bottom: none;
   border-left: 1px solid #d5d5d5;
   justify-content: space-around;
-  box-shadow: 0 -8px 0 #eb5038;
+  box-shadow: 0 -8px 0 #eb5038, 0 6px 0 white;
   padding-left: 0rem;
+
+  /* border: 1px solid green; */
 }
 
 /* Add visual indicator for scrollable content */
@@ -108,7 +107,7 @@
 
 .weatherDay:hover {
   border-bottom: none;
-  box-shadow: 0 -6px 0 #eb5038;
+  box-shadow: 0 -6px 0 #eb5038, 0 6px 0 white;
 }
 
 .weatherDay:hover .weatherDay__date {
@@ -116,7 +115,7 @@
 }
 
 .weatherDay--selected:hover {
-  box-shadow: 0 -8px 0 #eb5038;
+  box-shadow: 0 -8px 0 #eb5038, 0 6px 0 white;
 }
 
 .weatherDay__date {
@@ -124,7 +123,7 @@
   align-items: center;
   justify-content: flex-start;
   /* border: 1px solid red; */
-  margin-top: 0.3rem;
+  margin-top: 0.4rem;
 }
 
 .weatherDay--selected .weatherDay__date {
@@ -195,6 +194,7 @@
 .weatherDay__icon {
   width: 60%;
   /* border: 1px solid blue; */
+  margin-right: 0.4rem;
 }
 
 .weatherDay--selected .weatherDay__icon {
