--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   /* border: 1px solid blue; */
   justify-content: center;
+  color: black;
   /* height: 80vh; */
 }
 
