--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -2,7 +2,7 @@
   background-color: #067eb3;
 }
 .app-header {
-  height: 4rem;
+  height: 3.8rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -42,11 +42,21 @@
 
 .placesAutocomplete__inputWrap input {
   width: 100%;
-  padding: 8px 12px;
-  border: none;
-  border-radius: 4px;
-  font-size: 14px;
+  text-overflow: ellipsis;
+  padding: 0 0.5rem;
+  font-size: 1rem;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  margin: 0 2.75rem 0 0;
+  color: #202224;
+  background: #f6f6f6;
+  border-radius: 0;
+  border: solid 0.0625rem rgba(0, 0, 0, 0);
+  outline: none;
+}
+
+.placesAutocomplete__inputWrap input::placeholder {
+  color: #202224;
+  font-size: 1rem;
 }
 
 .inputError {
@@ -78,7 +88,7 @@ select {
 .search-icon {
   position: absolute;
   right: 10px; /* Position on the extreme right */
-  color: #949494;
+  color: #202224;
   z-index: 1;
   pointer-events: none; /* This ensures clicks pass through to the input */
   transition: color 0.3s ease;
@@ -91,12 +101,12 @@ select {
 
 /* Style for when the input has content */
 .placesAutocomplete__inputWrap input:not(:placeholder-shown) + .search-icon {
-  color: #149edc;
+  color: #202224;
 }
 
 /* Style for when the input is focused */
 .placesAutocomplete__inputWrap input:focus + .search-icon {
-  color: #149edc;
+  color: #202224;
 }
 
 /* Dark mode styles */
