--- a/src/styles/HourlyForecast.css
+++ b/src/styles/HourlyForecast.css
@@ -4,6 +4,8 @@
   height: 400px;
   margin-top: 50px;
   overflow-x: auto;
+  scroll-behavior: smooth;
+  -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
   max-width: 1280px;
   margin: 0 auto;
   /* padding: 0 1rem; */
