--- a/src/styles/DailyForecast.css
+++ b/src/styles/DailyForecast.css
@@ -163,7 +163,7 @@
   display: flex; /* Show on selected days */
   /* border: 1px solid red; */
   font-size: 20px;
-  text-align: left;
+  text-align: start;
   padding-left: 1rem;
   padding-right: 2rem;
   border-left: 1px solid #141414;
