--- a/src/styles/HourlyForecast.css
+++ b/src/styles/HourlyForecast.css
@@ -47,7 +47,7 @@
 .weatherByHourDetails {
   /* border: 1px solid blue; */
   background-color: #f6f6f6;
-  animation: fadeIn 0.4s forwards;
+  animation: fadeIn 2s forwards;
   width: 12.75rem;
   padding: 0.375rem 1.25rem;
   /* margin-top: 0.4rem; */
@@ -151,7 +151,7 @@ body.dark-mode .weatherDetailsRow {
 @keyframes fadeIn {
   from {
     opacity: 1;
-    transform: translateY(0%) translateX(-10px);
+    transform: translateY(0%) translateX(0);
   }
   to {
     opacity: 1;
