add some padding on the borders of the app

--- a/src/styles/DailyForecast.css
+++ b/src/styles/DailyForecast.css
@@ -6,13 +6,13 @@
   /* scrollbar-width: thin; */
   scroll-behavior: smooth;
   -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
+  padding: 0rem 1rem;
   padding-bottom: 0.3rem;
   flex-wrap: nowrap;
   align-items: end;
-  width: 100%;
   max-width: 1280px;
   margin: 0 auto;
-  /* border: 1px solid red; */
+  /* border: 1px solid green; */
 }
 
 .weatherDay {
