--- a/src/styles/LastUpdated.css
+++ b/src/styles/LastUpdated.css
@@ -5,6 +5,7 @@
   max-width: 1280px;
   margin: 0 auto;
   margin-top: 1rem;
+  padding: 0rem 1rem;
   /* border: 1px solid red; */
 }
 
@@ -27,6 +28,7 @@
   max-width: 1280px;
   margin: 0 auto;
   margin-top: 1rem;
+  padding: 0rem 1rem;
   /* border: 1px solid red; */
 }
 
