--- a/src/styles/Location.css
+++ b/src/styles/Location.css
@@ -5,7 +5,7 @@
   max-width: 1280px;
   margin-left: auto;
   margin-right: auto;
-  /* padding: 0px 1rem; */
+  padding: 0rem 1rem;
 }
 
 .selected-city {
