--- a/src/styles/MenuBar.css
+++ b/src/styles/MenuBar.css
@@ -27,7 +27,7 @@ body.dark-mode .menu-bar {
 }
 .menu-bar-right {
   margin-right: 1rem;
-  /* border: 1px solid red; */
+  /* border: 1px solid blue; */
   display: flex;
   align-items: center;
 }
@@ -35,7 +35,8 @@ body.dark-mode .menu-bar {
 .logo {
   display: flex;
   align-items: center;
-  margin-right: 2rem;
+  margin-right: 1.2rem;
+  /* border: 1px solid red; */
 }
 
 .logo span {
