--- a/src/styles/Location.css
+++ b/src/styles/Location.css
@@ -10,6 +10,15 @@
 
 .selected-city {
   font-size: 28px;
-  font-weight: 500;
+  font-weight: 400;
   color: white;
+}
+
+@media screen and (max-width: 700px) {
+  .location-section {
+     /* border: 1px solid red; */
+  }
+  .selected-city {
+    font-size: 24px;
+  }
 }
