--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -9,36 +9,5 @@
 
 .location-and-daily-forecast {
   /* border: 1px solid green; */
-  background-image: url('../../public/bi.jpg');
-}
-
-body.dark-mode {
-  background-color: #121212;
-  color: #f8f9fa;
-}
-
-body.dark-mode .App {
-  color: #f8f9fa;
-}
-
-body.dark-mode .app-header {
-  background-color: #222;
-}
-
-body.dark-mode .weatherDay {
-  background-color: rgba(40, 40, 40, 0.9);
-  border-left: 1px solid #444;
-}
-
-body.dark-mode .weatherDay__maxTemp {
-  color: #ff6b6b;
-}
-
-body.dark-mode .weatherDay__minTemp {
-  color: #4dabf7;
-}
-
-body.dark-mode .weatherDay--selected {
-  background-color: rgba(20, 158, 220, 0.2);
-  border: 1px solid rgba(20, 158, 220, 0.5);
+  background-image: url("../../public/bi.jpg");
 }
