--- a/src/styles/Sun.css
+++ b/src/styles/Sun.css
@@ -1,29 +1,22 @@
-.lastUpdated {
+.sun {
   display: flex;
   justify-content: flex-end;
   align-items: center;
   max-width: 1280px;
-  margin: 0 auto;
-  margin-top: 1rem;
+  margin: 0.5rem auto;
   padding: 0rem 1rem;
   /* border: 1px solid red; */
 }
 
-.lastUpdated-text {
-  margin: 0rem 0.6rem;
-  font-size: 13px;
-  fill: #545658;
-  color: #545658;
+.sunrise {
+  margin-right: 0.5rem;
 }
-.lastUpdated-time {
-  font-size: 13px;
-  color: #666;
-  fill: #545658;
-  color: #545658;
+.sunset {
+  margin-left: 0.5rem;
 }
 
 @media screen and (max-width: 700px) {
-  .lastUpdated {
+  .sun {
     /* border: 1px solid red; */
     justify-content: flex-start;
   }
