--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -10,7 +10,7 @@
   justify-content: space-between;
   /* padding: 0px 1rem; */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin-bottom: 2rem;
+  /* margin-bottom: 2rem; */
   position: relative; /* Ensure proper stacking context */
   z-index: 10; /* Keep header above other content */
   max-width: 1280px;
@@ -113,6 +113,10 @@ select {
 }
 
 @media screen and (max-width: 700px) {
+  .header-container {
+    padding: 0rem 0.5rem;
+    /* border: 1px solid red; */
+  }
   .app-header h1 {
     font-size: 1.8rem;
     margin-right: 2rem;
