--- a/src/styles/HourlyForecast.css
+++ b/src/styles/HourlyForecast.css
@@ -9,6 +9,8 @@
   -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
   max-width: 1280px;
   margin: 0 auto;
+  border-left: 1px solid #d5d5d5;
+  border-right: 1px solid #d5d5d5;
   /* padding: 0 1rem; */
 }
 
@@ -29,16 +31,18 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  border-left: 1px solid #d5d5d5;
+  border-right: 1px solid #d5d5d5;
   width: 4rem;
   /* border: 1px solid red; */
 }
 
 /* Active weatherByHour styling when selected */
-.weatherByHour--active {
-  background-color: rgba(20, 158, 220, 0.1);
-  box-shadow: 0 -3px 0 #eb5038;
-  z-index: 2;
+.weatherByHourSummary--expanded {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border-right: none;
+  width: 4rem;
 }
 
 .weatherByHour:hover {
@@ -108,6 +112,7 @@
   background-color: #f6f6f6;
   width: 14rem;
   padding: 0.375rem 1.25rem;
+  border-right: 1px solid #d5d5d5;
 }
 
 .weatherDetailsCondition {
@@ -242,6 +247,7 @@
   width: 200px;
   font-size: 14px;
   cursor: pointer;
+  border-right: 1px solid #d5d5d5;
   /* border: 1px solid red; */
 }
 
@@ -276,6 +282,9 @@
   color: #067eb3;
 }
 @media (max-width: 700px) {
+  .chart {
+    padding: 0rem;
+  }
   .weatherByHourTimeZero {
     /* border: 1px solid red; */
   }
