--- a/src/styles/LastUpdated.css
+++ b/src/styles/LastUpdated.css
@@ -26,6 +26,7 @@
   .lastUpdated {
     /* border: 1px solid red; */
     justify-content: flex-start;
-    margin: 1rem 0;
+    margin: 1rem 0rem;
+    padding: 0rem 0.5rem;
   }
 }
