--- a/src/styles/Location.css
+++ b/src/styles/Location.css
@@ -5,7 +5,7 @@
   max-width: 1280px;
   margin-left: auto;
   margin-right: auto;
-  padding: 0rem 1rem;
+  /* padding: 0rem 1rem; */
 }
 
 .selected-city {
@@ -17,6 +17,7 @@
 @media screen and (max-width: 700px) {
   .location-section {
      /* border: 1px solid red; */
+     padding: 0rem 0.5rem;
   }
   .selected-city {
     font-size: 24px;
