--- a/src/styles/HourlyForecast.css
+++ b/src/styles/HourlyForecast.css
@@ -16,7 +16,7 @@
 
 .weatherByHour {
   display: flex;
-  margin-top: 0.4rem;
+  margin-top: 3px;
   /* border: 1px solid green; */
   min-height: 348px;
   background-color: white;
@@ -24,7 +24,7 @@
 
 .weatherByHour:hover {
   cursor: pointer;
-  box-shadow: 0 -3px 0 #eb5038;
+  box-shadow: 0 -3px 0 #eb5038, 0 3px 0 white;
 }
 
 .weatherByHourSummary {
