--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -15,7 +15,7 @@
   z-index: 10; /* Keep header above other content */
   max-width: 1280px;
   margin: 0 auto;
-  /* border: 1px solid red; */
+  /* border: 1px solid blue; */
 }
 
 .app-header h1 {
